[gd_scene load_steps=7 format=3 uid="uid://c2vdku8252615"]

[ext_resource type="Texture2D" uid="uid://kuyhimmf0hmo" path="res://assets/images/menu.png" id="1_v1yv7"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_yyjq1"]
[ext_resource type="FontFile" uid="uid://brj6ukndau2j2" path="res://assets/fonts/monogram.ttf" id="2_x1hpy"]
[ext_resource type="AudioStream" uid="uid://s0p17bd4lw7w" path="res://assets/music/main_menu.wav" id="3_ynjy2"]
[ext_resource type="AudioStream" uid="uid://caxmxb8wkdfs7" path="res://assets/sounds/click.ogg" id="5_xa3tx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j655w"]
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0335107, 0.0319197, 0.00165493, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.967598, 0.766113, 0.926862, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yyjq1")

[node name="Image" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v1yv7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_x1hpy")
theme_override_styles/normal = SubResource("StyleBoxFlat_j655w")
text = "Start"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_x1hpy")
theme_override_styles/normal = SubResource("StyleBoxFlat_j655w")
text = "Exit"

[node name="MainMenuSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ynjy2")
autoplay = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xa3tx")
volume_db = 10.0

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
